--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.937.0",
+    "@aws-sdk/s3-request-presigner": "^3.940.0",
     "next": "16.0.3",
     "react": "19.2.0",
     "react-dom": "19.2.0"
